--- a/TradoXBot/TradoXBot.csproj
+++ b/TradoXBot/TradoXBot.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MongoDB.Driver" Version="3.4.3" />
     <PackageReference Include="Polly" Version="8.6.3" />
     <PackageReference Include="Quartz" Version="3.15.0" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.35.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="140.0.7339.8000" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
